crates/pvm-storage/tests/ui/mapping_insert_requires_mut.stderr
error[E0596]: cannot borrow `m` as mutable, as it is not declared as mutable
 --> tests/ui/mapping_insert_requires_mut.rs:9:5
  |
9 |     m.insert(&Address([0xAA; 20]), &U256::from(42));
  |     ^ cannot borrow as mutable
  |
help: consider changing this to be mutable
  |
8 |     let mut m = Mapping::<Address, U256>::new(StorageKey::from_slot(0), host);
  |         +++
